--- a/Chrome Extension/popup.css
+++ b/Chrome Extension/popup.css
@@ -1,42 +1,70 @@
 button {
 	/* round corders */
+	background: linear-gradient(90deg, rgba(205,91,149,1) 0%, rgba(152,70,202,1) 5%, rgba(255,215,14,1) 50%, #BBDE3C 75%);
 	border-radius: 5px;
 	cursor: pointer;
 	margin: 10px;
 	padding: 10px;
 	background-color: #47cae2;
-    border: none;
-    color: white;
+	border: none;
+	color: white;
 	margin-bottom: 30px;
+	flex: 1 1 auto;
+	margin: 10px;
+	transition: all 0.3s ease-in-out;
+	background-size: 4000% auto;
 }
-a{
-	color:black
+
+a {
+	color: black
 }
-.text-white{
+
+.text-white {
 	color: white;
 }
-img{
-	margin-top: 10px;
+
+img {
+	margin-top: 20px;
 }
-.invis{
+
+.invis {
 	visibility: hidden;
 }
+
 .grow:hover {
-	transition: all 0.3s ease-in-out;
-    transform: scale(1.1);
+	background-position: 5% center;
+	transform: scale(1.1);
 }
+
 .press:active {
-    transform: scale(1.3);
-    background-color: rgb(239, 255, 64);
-  }
+	background-position: 50% center;
+	transform: scale(1.3);
+}
+
+
+@keyframes shift {
+	0% {
+		background-position: 0% 50%;
+	}
+
+	50% {
+		background-position: 100% 50%;
+	}
+
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
 .grow.added {
-    background-color: #2ecc71;
-  }
+	color:black;
+	background-position: 100% center;
+}
 
 body {
 	background: #202124;
-    width: 200px;
-    height: 120px;
+	width: 200px;
+	height: 120px;
 }
 
 .checkbox {
@@ -46,14 +74,16 @@ body {
 	--border-active: #13e1be;
 	--tick: #fff;
 	position: relative;
-  }
-  .checkbox input,
-  .checkbox svg {
+}
+
+.checkbox input,
+.checkbox svg {
 	width: 40px;
 	height: 40px;
 	display: block;
-  }
-  .checkbox input {
+}
+
+.checkbox input {
 	-webkit-appearance: none;
 	-moz-appearance: none;
 	position: relative;
@@ -66,15 +96,18 @@ body {
 	border-radius: 4px;
 	transition: box-shadow 0.3s;
 	box-shadow: inset 0 0 0 var(--s, 1px) var(--b, var(--border));
-  }
-  .checkbox input:hover {
+}
+
+.checkbox input:hover {
 	--s: 2px;
 	--b: var(--border-hover);
-  }
-  .checkbox input:checked {
+}
+
+.checkbox input:checked {
 	--b: var(--border-active);
-  }
-  .checkbox svg {
+}
+
+.checkbox svg {
 	pointer-events: none;
 	fill: none;
 	stroke-width: 2px;
@@ -87,65 +120,78 @@ body {
 	width: 40px;
 	height: 40px;
 	transform: scale(var(--scale, 1)) translateZ(0);
-  }
-  .checkbox.path input:checked {
+}
+
+.checkbox.path input:checked {
 	--s: 2px;
 	transition-delay: 0.4s;
-  }
-  .checkbox.path input:checked + svg {
+}
+
+.checkbox.path input:checked+svg {
 	--a: 16.1 86.12;
 	--o: 102.22;
-  }
-  .checkbox.path svg {
+}
+
+.checkbox.path svg {
 	stroke-dasharray: var(--a, 86.12);
 	stroke-dashoffset: var(--o, 86.12);
 	transition: stroke-dasharray 0.6s, stroke-dashoffset 0.6s;
-  }
-  .checkbox.bounce {
+}
+
+.checkbox.bounce {
 	background-color: #2ecc71;
 	--stroke: var(--tick);
-  }
-  .checkbox.bounce input:checked {
+}
+
+.checkbox.bounce input:checked {
 	background-color: #2ecc71;
 	--s: 11px;
-  }
-  .checkbox.bounce input:checked + svg {
+}
+
+.checkbox.bounce input:checked+svg {
 	background-color: #2ecc71;
 	animation: bounce 0.4s linear forwards 0.2s;
-  }
-  .checkbox.bounce svg {
+}
+
+.checkbox.bounce svg {
 	background-color: #2ecc71;
 	--scale: 0;
-  }
-  
-  @keyframes bounce {
+}
+
+@keyframes bounce {
 	50% {
-	  transform: scale(1.2);
+		transform: scale(1.2);
 	}
+
 	75% {
-	  transform: scale(0.9);
+		transform: scale(0.9);
 	}
+
 	100% {
-	  transform: scale(1);
+		transform: scale(1);
 	}
-  }
-  html {
+}
+
+html {
 	box-sizing: border-box;
 	-webkit-font-smoothing: antialiased;
-  }
-  
-  * {
+}
+
+* {
 	box-sizing: inherit;
-  }
-  *:before, *:after {
+}
+
+*:before,
+*:after {
 	box-sizing: inherit;
-  }
-  .container {
-    display: flex;
-    flex-direction: column;
+}
+
+.container {
+	display: flex;
+	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 	/* full size with and height */
 	width: 100%;
 	height: 100%;
-  }
+}
