--- a/extension/popup.css
+++ b/extension/popup.css
@@ -1,4 +1,4 @@
-button {
+.button-primary {
 	/* round corders */
 	background: linear-gradient(90deg, rgba(205,91,149,1) 0%, rgba(152,70,202,1) 5%, rgba(255,215,14,1) 50%, #ffe478 75%);
 	border-radius: 5px;
@@ -15,8 +15,14 @@ button {
 	background-size: 4000% auto;
 }
 
+.button-secondary {
+	background: transparent;
+	border: 1px solid rgba(205,91,149);
+}
+
 a {
-	color: black
+	color: black;
+	text-decoration: none;
 }
 
 .text-white {
@@ -103,7 +109,7 @@ body.active {
 
 .select-btn {
 
-	width: 250px;
+	width: 125px;
   
 	display: flex;
   
