--- a/extension/popup.css
+++ b/extension/popup.css
@@ -96,11 +96,11 @@ html {
 
 body {
 	background: #202124;
+	display: 'flex';
+	flex-direction: 'column';
 	width: 300px;
-	height: 190px;
 }
 body.active {
-	background: #202124;
 	width: 300px;
 	height: 250px;
 }
